# Parser_responses

./: README.md  app.py  docker-compose.yaml  pyproject.toml  utils.py  utils_habr.py  utils_hh.py
templates/: index.html
