[tool.poetry]
name = "parserhh"
version = "0.1.0"
description = ""
authors = ["arturkalimullin <noti1996@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
aiohttp = "^3.8.4"
asyncio = "^3.4.3"
pandas = "^1.5.3"
beautifulsoup4 = "^4.12.0"
gunicorn = "^20.1.0"
babel = "^2.12.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
